--------------------------------------------------------------------------
---------                  Ampache -- CHANGELOG                  ---------   
--------------------------------------------------------------------------

--------------------------------------------------------------------------
  v.3.3.2-Beta1
  	- Rewrote entire Playlist class and document to use the new id
		field in database, also added support for playlist tracks
		that are based on search critera. NOT FINISHED!
  	- Fixed Album Art Search so that it doesn't include the artist
		if there is more then one artist on the album
  	- Fixed Registration code so that it used existing functions and
		added default to off config option for captcha because
		its hard to detect compatiblity
  	- Fixed some logic errors in Downsampling code
  	- Updated Registration code (Thx pb1dft)
  	- Updated GetId3() Library to v.1.7.5
  	- Updated SQL file
	- Fixed Install script so it throws errors and is now able to
		if specified create the database user for you
  	- Added Popup Album Art (Thx Di-Fosfor)
  	- Fixed Typo in Amazon Search debug statement
  	- Added sort_files.php.inc to /bin 
  	- Fixed Ratings designation mistake and added it to artist view
  	- Fixed location detection for contextual titls and browse
		on the simple menu's (Thx SoundOfEmotion)
  	- Fixed a botched change to the database (No Data loss!) but I 
		still feel stupid (Blame Vollmer)
  	- Fixed a problem where .flac files wouldn't get reconized by
		the regular expresison that pulls in files from m3u's
		(Thx nhorlock)
  	- Fixed a logic problem with the rating system where it would
		show a star for the 0 value when it should always show
		the 0 or don't play symbol
  	- Fixed drop-downs on sidebar not resizing with fontsize
		(Thx SoundOfEmotion)
  	- Fixed wrap-around text by removing float:left; on #content
		(Thx Sigger)

--------------------------------------------------------------------------
  v.3.3.2-Alpha4 12/27/2005 