@@ -26,28 +26,7 @@ $artist_id = $artist->id;
 $web_path = conf('web_path');
 ?>
 <br />
-<table class="text-box">
-<tr>
-	<td>
-	<span class="header1"><?php print _("Albums by") . " " . $artist->full_name; ?></span>
-	<ul>
-		<?php 
-			if (conf('ratings')) { 
-				show_rating($artist->id,'artist');
-			} // end if ratings
-		echo "<br />\n";
-		?>
-        	<li><a href="<?php print $web_path; ?>/artists.php?action=show_all_songs&amp;artist=<?php print $artist_id; ?>"><?php print _("Show All Songs By") . " " . $artist->full_name; ?></a></li>
-	        <li><a href="<?php print $web_path; ?>/song.php?action=m3u&amp;artist=<?php print $artist_id; ?>"><?php print _("Play All Songs By") . " " . $artist->full_name; ?></a></li>
-	        <li><a href="<?php print $web_path; ?>/song.php?action=m3u&amp;artist_random=<?php print $artist_id; ?>"><?php print _("Play Random Songs By") . " " . $artist->full_name; ?></a></li>
-		<?php  if ($user->has_access('100')) { ?> 
-			<li><a href="<?php echo $web_path; ?>/artists.php?action=update_from_tags&amp;artist=<?php print $artist_id; ?>"><?php print _("Update from tags"); ?></a></li>
-			<li><a href="<?php echo $web_path; ?>/artists.php?action=show_rename&amp;artist=<?php echo $artist_id; ?>"><?php echo _("Rename Artist"); ?></a></li>
-		<?php } ?>
-	</ul>
-	</td>
-</tr>
-</table>
+<?php require (conf('prefix') . '/templates/show_artist_box.inc.php'); ?>
 <!-- *** Multi-Album Art Display Thx MrBlahh Updated by clader *** -->
 <br />
 <form name="songs" method="post" enctype="multipart/form-data" action="artists.php">
